--- a/ASPNETCoreSamen/Views/Movie/Index.cshtml
+++ b/ASPNETCoreSamen/Views/Movie/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<MovieListViewModel>
 
 <h1>Movies</h1>
+<a asp-controller="Movie" asp-action="Create">Add movie</a>
 
 <table>
 	<thead>
